<resources>
    <string name="app_name">researchProject</string>
    <string name="back">Back</string>

<!--  for activity main  -->
    <string name="project_name">What\'s That Album?</string>
    <string name="description">This is an amazing app that can recognize a cover of music album and allows you to listen to relevant songs in Spotify.
        You can keep track of previously searched songs with our search history and even leave reviews for albums!
        Try it now!</string>

<!--  for welcome page  -->
    <string name="welcome">Welcome!</string>
    <string name="hearartist">Hear more from this artist:</string>
    <string name="play">Play</string>
    <string name="View_history">View History</string>
    <string name="get_new_album">Search for a New Album</string>

<!--  for activity main 2 (player)  -->
    <string name="player">Music Player</string>
    <string name="now_playing">Now Playing:</string>
    <string name="play_music">Play Music</string>
    <string name="pause_music">Pause Music</string>
    <string name="reviews">Reviews</string>
    <string name="add_review">Add Review</string>
    <string name="say_something">Say something here...</string>
    <string name="no_song">No Songs Loaded. Try Searching Again?</string>
    <string name="search_again">Error: No text was found in the search terms</string>

<!--  for text recog  -->
    <string name="Upload">Take a New Photo</string>
    <string name="result">Search Result</string>
    <string name="or">OR</string>
    <string name="type_search">Type here and search!</string>
    <string name="search">Search</string>


<!--  for history  -->
    <string name="choose_one">Choose one album and play it in Spotify!</string>
    <string name="play_song">Play the selected song</string>
    <string name="selectedsong">Selected Song</string>
    <string name="no_song_selected">No Song Selected Yet.</string>
</resources>
