<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:text="@string/welcome"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/recom"
        android:layout_below="@+id/welcome"
        android:layout_width="300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:text="@string/hearartist" />

            <Button
                android:id="@+id/playrecom"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/play" />
        </LinearLayout>

        <TextView
            android:id="@+id/recomsong"
            android:textSize="20dp"
            android:background="@color/cardview_shadow_end_color"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="Taylor Swift" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/View_history" />

        <Button
            android:id="@+id/get_new_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/get_new_album" />

    </LinearLayout>



</RelativeLayout>
