<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TextRecognitionActivity">

    <Button
        android:id="@+id/find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Find_pic"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/find"
        android:layout_marginTop="70dp"/>


    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Upload"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/image"
        android:layout_marginTop="70dp"/>

    <TextView
        android:id="@+id/searchResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/result"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/upload"
        android:layout_marginTop="70dp"/>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="backFunction"
        android:text="@string/back" />

</RelativeLayout>